--- a/src/app/layout/default/sidebar/sidebar.component.html
+++ b/src/app/layout/default/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
   <ul>
     <li>
       @if (links().length) {
-        <h2>Go to</h2>
+        <h2>{{ group() }}</h2>
         <ul class="menu">
         @for (link of links(); track link.id) {
           <app-side-bar-menu-item [link]="link" />
