Dynamic page titles

--- a/src/app/pages/phd-defense/phd-defense.component.html
+++ b/src/app/pages/phd-defense/phd-defense.component.html
@@ -1,9 +1,8 @@
 <div class="post">
   <div class="title">
-    <h2>Events</h2>
+    <h2>{{ (page | async)?.title }}</h2>
   </div>
   <div class="entry">
-    <h3>PhD Defense</h3>
     <p style="clear: both">
       Ahmad Shahwan has defended his PhD thesis entitled: <strong>Processing Geometric Models of Assemblies to Structure and Enrich them
       with Functional Information.</strong>
