--- a/src/app/pages/research/research.component.html
+++ b/src/app/pages/research/research.component.html
@@ -1,6 +1,6 @@
 <div class="post">
   <div class="title">
-    <h2>Publications</h2>
+    <h2>{{ (page | async)?.title }}</h2>
   </div>
   <div class="entry">
     <app-scrollable>
