--- a/src/app/pages/materials/materials.component.html
+++ b/src/app/pages/materials/materials.component.html
@@ -1,6 +1,6 @@
 <div class="post">
   <div class="title">
-    <h2>Teaching Materials</h2>
+    <h2>{{ (page | async)?.title }}</h2>
   </div>
   <div class="entry">
     <h3>Authored</h3>
