--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,7 +3,7 @@
     <h2>Short Bio</h2>
   </div>
   <div class="entry">
-    <img ngSrc="./assets/images/pigeons.jpg" alt="" width="112" height="131" class="alignleft" />
+    <img ngSrc="./assets/images/pigeons.jpg" alt="" width="112" height="131" class="align-left" />
     <p>Ahmad Shahwan is software architect and full-stack developer who is willing to unfold opportunities, share expertise and exchange ideas.</p>
     <p>Ahmad worked on designing, realizing and maintaining robust digital solutions for clients such as
       <a href="https://www.sncf.com" target="_blank">SNCF</a>, <a href="https://www.malt.fr" target="_blank">Malt</a>, <a href="https://www.rtone.fr" target="_blank">Rtone</a> and others.</p>
