CMS-based publications

--- a/src/app/pages/research/research.component.html
+++ b/src/app/pages/research/research.component.html
@@ -5,80 +5,19 @@
   <div class="entry">
     <app-scrollable>
       <div id="bib">
-        <h2>PhD Theses</h2>
-        <h3>2014</h3>
-        <ol start="10">
-          <li><span class="authors">Shahwan, A.</span> <span class="title"> <a target="_blank" href="assets/pdf/phd2014.pdf">Processing Geometric Models of Assemblies to Structure and Enrich them with Functional Information</a></span>.
-            Ph.D. Thesis, <span class="school">Grenoble University</span>, 2014.<span class="links">&nbsp;<span
-              class="webpdf"> <a target="_blank" href="assets/pdf/phd2014.pdf">pdf...</a></span>&nbsp;</span></li>
-        </ol>
-        <h2>Master's Theses</h2>
-        <h3>2010</h3>
-        <ol start="9">
-          <li><span class="authors">Shahwan, A. and Redon, S.</span> <span class="title"> <a target="_blank" href="assets/pdf/nanod2010.pdf">Automatic Conversion of Molecular Models</a></span>.
-            Master's Thesis, <span class="school">Universite Joseph Fourier</span>, 2010.<span class="links"> <span
-              class="webpdf"> <a target="_blank" href="assets/pdf/nanod2010.pdf">pdf...</a></span>&nbsp;</span></li>
-        </ol>
-        <h2>Articles</h2>
-        <h3>2015</h3>
-        <ol start="1">
-          <li><span class="authors">Shahwan,  A.; Leon,  J-C.; Foucault,  G. and Fine,  L.</span> <span class="title"><a
-            target="_blank" href="assets/pdf/ec14.pdf">Functional Restructuring of CAD Models for FEA Purposes</a></span>. <span
-            class="in">In Engineering Computations</span>,
-            32 (1), 2015.<span class="links">&nbsp;<span class="webpdf"><a
-              target="_blank" href="assets/pdf/ec14.pdf">pdf...</a></span>&nbsp;</span></li>
-        </ol>
-        <h3>2014</h3>
-        <ol start="2">
-          <li><span
-            class="authors">Boussuge,  F.; Shahwan,  A.; Leon,  J-C.; Hahmann,  S.; Foucault,  G. and Fine,  L.</span>
-            <span class="title"> <a target="_blank" href="assets/pdf/cada2013.pdf">Template-based geometric transformations of a functionally enriched DMU into FE assembly models</a></span>.
-            <span class="in">In <a href="http://dx.doi.org/10.1080/16864360.2014.881187" target="_blank">Computer-Aided Design and Applications</a></span>,
-            11 (4): 436-449, 2014.<span class="links">&nbsp;<span class="webpdf"><a
-              target="_blank" href="assets/pdf/cada2013.pdf">pdf...</a></span>&nbsp;</span>
-          </li>
-        </ol>
-        <h3>2013</h3>
-        <ol start="3">
-          <li><span class="authors">Shahwan, A.; Leon, J-C.; Foucault, G.; Trlin, M. and Palombi, O.</span> <span
-            class="title"> <a target="_blank" href="assets/pdf/cad2013.pdf">Qualitative behavioral reasoning from components' interfaces to components' functions for DMU adaption to FE analyses</a></span>.
-            <span class="in">In <a href="http://www.sciencedirect.com/science/article/pii/S0010448512002266"
-                                   target="_blank">Computer-Aided Design</a></span>,
-            45 (2): 383-394, 2013.<span class="links">&nbsp;<span class="webpdf"><a
-              target="_blank"
-              href="assets/pdf/cad2013.pdf">pdf...</a></span>&nbsp; <span
-              class="doi"><a href="http://dx.doi.org/10.1016/j.cad.2012.10.021"
-                             target="_blank">doi...</a></span>&nbsp;</span></li>
-        </ol>
-        <h2>In Proceedings</h2>
-        <h3>2012</h3>
-        <ol start="4">
-          <li><span class="authors">Shahwan, A.; Foucault, G.; Leon, J-C. and Fine, L.</span> <span class="title"><a
-            target="_blank" href="assets/pdf/tmce2012.pdf">Deriving Functional Properties of Components from the Analysis of Digital Mock-ups</a></span>.
-            <span class="in">In <a href="http://www.tmce.org/"
-                                   target="_blank">Tools and Methods of Competitive Engineering</a></span>, Karlsruhe,
-            Germany, 2012.<span class="links">&nbsp;<span class="webpdf"><a
-              target="_blank" href="assets/pdf/tmce2012.pdf">pdf...</a></span>&nbsp;</span>
-          </li>
-          <li><span class="authors">Li, K; Shahwan, A; Trlin, M; Foucault, G. and Leon, J-C.</span> <span class="title">Automated Contextual Annotation of B-Rep Cad Mechanical Components Deriving Technology and Symmetry Information to Support Partial Retrieval</span>.
-            <span class="in">In Eurographics Workshop on 3D Object Retrieval</span>, pages 67-70, Cagliari, Italy,
-            2012.<span
-              class="links"></span></li>
-          <li><span class="authors">Bonneau,  G-P.; Jourdes,  F.; Hahmann,  S.; Faure,  F.; Foucault,  G.; Trlin,  M. and Shahwan,  A.</span>
-            <span class="title">Interface, représentations fonctionnelles et transformations d'assemblages complexes pour la simulation des structures</span>.
-            <span class="in">In Congrès NAFEMS France - Simulation numérique: moteur de performance</span>, 2012.<span
-              class="links"></span></li>
-        </ol>
-        <h3>2011</h3>
-        <ol start="7">
-          <li><span class="authors">Shahwan, A.; Foucault, G.; Leon, J-C. and Fine, L.</span> <span class="title"> <a target="_blank" href="assets/pdf/gtmg2011.pdf">Towards Automated Identification of Functional Designations of Components Based on Geometric Analysis of a DMU</a></span>.
-            <span class="in">In <a href="http://www-ljk.imag.fr/GTMG2011/" target="_blank">Journees du Groupe de Travail en Modelisation Geometrique</a></span>,
-            Grenoble, France, 2011.<span class="links">&nbsp;<span class="webpdf"> <a target="_blank" href="assets/pdf/gtmg2011.pdf">pdf...</a></span>&nbsp;</span>
-          </li>
-          <li><span class="authors">Foucault, G.; Shahwan, A.; Leon, J-C. and Fine, L.</span> <span class="title">What is the Content of a DMU? Analysis and Proposal of Improvements</span>.
-            <span class="in">In <a href="http://www.univ-valenciennes.fr/congres/MontDore2011/" target="_blank">Colloque National AIP-PRIMECA 2011</a></span>,
-            Mont-Dore, France, 2011.<span class="links"></span></li>
-        </ol>
+        @for (category of categories; track category.id) {
+          <h2>{{ category.title }}</h2>
+          @for (year of yearsByCategory(category); track year) {
+            <h3>{{ year }}</h3>
+              <ul>
+              @for (publication of publicationsByCategoryAndYear(category, year); track publication.id) {
+                <li>
+                  <span [innerHTML]="publication.description.html"></span>
+                </li>
+              }
+              </ul>
+          }
+        }
       </div>
     </app-scrollable>
   </div>
