--- a/src/app/layout/default/header/header.component.scss
+++ b/src/app/layout/default/header/header.component.scss
@@ -18,6 +18,9 @@
 #logo h2 {
   padding: 0 0 0 30px;
   margin: 0;
+  color: #7B7B7B;
+  font-size: 13px;
+  font-weight: bold;
 }
 
 #logo a {
@@ -30,7 +33,7 @@
   color: #0098A4;
 }
 
-#logo h2, #logo h2 a {
+#logo h2 a {
   font-size: 13px;
   color: #9F9F9F;
 }
