--- a/src/app/layout/default/sidebar/sidebar.component.html
+++ b/src/app/layout/default/sidebar/sidebar.component.html
@@ -13,6 +13,17 @@
       }
     </li>
     <li>
+      <h2>{{ (sidebar | async)?.languageMenuTitle }}</h2>
+      <ul class="menu">
+        <li>
+          <app-menu-link [link]="enLanguageLink" [doNotLocalize]="true">English</app-menu-link>
+        </li>
+        <li>
+          <app-menu-link [link]="frLanguageLink" [doNotLocalize]="true">Français</app-menu-link>
+        </li>
+      </ul>
+    </li>
+    <li>
       <h2>{{ (sidebar | async)?.externalLinksMenuTitle }}</h2>
       <ul>
         @for (link of (sidebar | async)?.externalLinks; track link.id) {
