Avoid small caps all together

--- a/src/app/layout/default/header/header.component.html
+++ b/src/app/layout/default/header/header.component.html
@@ -1,6 +1,6 @@
 <div id="header">
   <div id="logo">
-    <h1>Ahmad <span class="sc">Shahwan</span></h1>
+    <h1>Ahmad Shahwan</h1>
     <h2>{{ (header | async)?.subtitle }}</h2>
   </div>
   <div id="menu">
