Skills as icons

--- a/src/app/pages/expertise/skill/skill.component.html
+++ b/src/app/pages/expertise/skill/skill.component.html
@@ -1,11 +1,4 @@
-<div class="skill">
-  <div class="icon">
-    <img class="thumbnail" [ngSrc]="model.icon.url" height="32" width="32" [alt]="model.title"/>
-  </div>
-  <div class="details">
-    <div class="header" [style.width]="proficiencyAsPercentage">{{ model.title }}</div>
-    <div class="description">
-      {{ model.details }}
-    </div>
-  </div>
+<div class="skill" [style.width]="width">
+  <img class="thumbnail" [src]="model.icon.url" [alt]="model.title"/>
+  <div class="header" [style.font-size]="fontSize">{{ model.title }}</div>
 </div>
