--- a/src/app/pages/expertise/expertise.component.html
+++ b/src/app/pages/expertise/expertise.component.html
@@ -3,10 +3,13 @@
     <h2>{{ (page | async)?.title }}</h2>
   </div>
   <div class="entry">
+    <div class="details">{{ details }}</div>
     <app-scrollable>
+      <div class="skills">
       @for (skill of skills | async; track skill.id) {
-        <app-skill [model]="skill" />
+        <app-skill [model]="skill" (mouseenter)="show(skill)" (mouseleave)="hide()" />
       }
+      </div>
     </app-scrollable>
   </div>
 </div>
