--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,16 +1,16 @@
 <div class="post">
-  @if (homepage && homepage.bio.image) {
+  @if (homepage && homepage.bioImage && page && page.title) {
     <div class="title">
-      <h2>{{ homepage.bio.title }}</h2>
+      <h2>{{ page.title }}</h2>
     </div>
     <div class="entry">
       <img
-        [ngSrc]="homepage.bio.image.url"
-        [alt]="homepage.bio.title"
-        [width]="homepage.bio.image.width"
-        [height]="homepage.bio.image.height"
+        [ngSrc]="homepage.bioImage.url"
+        [alt]="page.title"
+        [width]="homepage.bioImage.width"
+        [height]="homepage.bioImage.height"
         class="align-left" />
-      <div [innerHTML]="homepage.bio.text.html"></div>
+      <div [innerHTML]="homepage.bio.html"></div>
 
       @if (homepage.interests.length) {
         <h3>{{ homepage.interestsTitle }}</h3>
