--- a/src/app/pages/phd-defense/phd-defense.component.html
+++ b/src/app/pages/phd-defense/phd-defense.component.html
@@ -2,5 +2,5 @@
   <div class="title">
     <h2>{{ (page | async)?.title }}</h2>
   </div>
-  <div class="entry" [innerHTML]="(content | async)?.text?.html"></div>
+  <div class="entry" [innerHTML]="(content | async)?.html"></div>
 </div>
