--- a/src/app/pages/phd-defense/phd-defense.component.html
+++ b/src/app/pages/phd-defense/phd-defense.component.html
@@ -1,6 +1,6 @@
 <div class="post">
   <div class="title">
-    <h2>{{ (page | async)?.title }}</h2>
+    <h2>{{ page?.title }}</h2>
   </div>
-  <div class="entry" [innerHTML]="(content | async)?.html"></div>
+  <div class="entry" [innerHTML]="page?.text?.html"></div>
 </div>
