Remove unnecessary models

--- a/src/app/pages/interests/interests.component.html
+++ b/src/app/pages/interests/interests.component.html
@@ -1,10 +1,10 @@
 <div class="post">
-  @if (homepage && page) {
+  @if (page) {
     <div class="title">
       <h2>{{ page.title }}</h2>
     </div>
     <div class="interests">
-      @for (interest of homepage.interests; track interest.id) {
+      @for (interest of interests; track interest.id) {
         <div class="interest-details">
           <div class="interest-title">{{ interest.title }}</div>
           <div>{{ interest.description }}</div>
