--- a/src/app/pages/development/certificate/certificate.component.html
+++ b/src/app/pages/development/certificate/certificate.component.html
@@ -5,7 +5,11 @@
   <div class="details">
     <div class="primary">
       <div class="academic-title">
-        {{ model.title }}
+        @if (model.url) {
+          <a [href]="model.url" target="_blank">{{ model.title }}</a>
+        } @else {
+          {{ model.title }}
+        }
       </div>
     </div>
     <div class="secondary">
