--- a/src/app/layout/default/footer/footer.component.scss
+++ b/src/app/layout/default/footer/footer.component.scss
@@ -1,26 +1,37 @@
-
+/* Minimal Footer */
 #footer {
   display: flex;
   flex-direction: column;
-  width:  920px;
-  height: 100px;
+  align-items: center;
+  width: 100%;
+  max-width: var(--max-width);
   margin: 0 auto;
-  padding: 30px 0 0 0;
-  background: url(../../../../assets/images/bg07.jpg) no-repeat left top;
+  padding: calc(var(--spacing-unit) * 2) var(--spacing-unit);
+  border-top: 1px solid var(--color-border);
+  gap: var(--spacing-unit);
 
   .socials {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    width: 200px;
+    justify-content: center;
+    gap: 1rem;
     align-items: center;
-    margin: 0 auto 10px auto;
+
+    a {
+      opacity: 0.6;
+      transition: opacity 0.15s ease;
+
+      &:hover {
+        opacity: 1;
+      }
+    }
   }
 
   p {
     margin: 0;
     text-align: center;
-    font-size: 11px;
+    font-size: 0.8rem;
+    color: var(--color-text-light);
   }
 
   img {
@@ -28,3 +39,10 @@
     width: 16px;
   }
 }
+
+@media (min-width: 768px) {
+  #footer {
+    max-width: 1000px;
+  }
+}
+
