--- a/src/app/layout/default/sidebar/sidebar.component.scss
+++ b/src/app/layout/default/sidebar/sidebar.component.scss
@@ -1,49 +1,74 @@
+/* Minimal Sidebar */
 #sidebar {
-  float: right;
-  width: 180px;
-  padding: 50px 10px 0 0;
+  width: 200px;
+  flex-shrink: 0;
+  padding-top: calc(var(--spacing-unit) * 2);
+  font-size: 0.9rem;
 
   img {
     width: 16px;
     height: 16px;
+    margin-right: 0.5rem;
+    vertical-align: middle;
   }
 
   > ul {
-    margin: 0 0 0 15px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+
+    > li {
+      margin-bottom: calc(var(--spacing-unit) * 1.5);
+    }
   }
 
   h2 {
-    font-size: 16px;
-    color: #BCE8EC;
-    padding-right: 25px;
-    background-image: url("../../../../assets/images/img04.gif");
-    text-align: right;
+    font-size: 0.75rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+    color: var(--color-text-muted);
+    margin-bottom: 0.5rem;
+    padding-bottom: 0.25rem;
+    border-bottom: 1px solid var(--color-border);
   }
 
   ::ng-deep a, ::ng-deep span {
-    color: #BCE8EC;
+    color: var(--color-text);
+  }
+
+  ::ng-deep a:hover {
+    color: var(--color-link);
   }
 
   ul.menu {
-    margin-bottom: 25px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
   }
 
   ::ng-deep ul.menu {
+    li {
+      padding: 0.25rem 0;
+    }
+
     a, span {
-      width: calc(100% - 16px);
-      display: inline-block;
-      padding-left: 15px;
+      display: block;
 
       &.current {
-        color: #b0b0b0;
+        color: var(--color-link);
+        font-weight: 500;
       }
     }
   }
 
-  ::ng-deep ul.menu ul li {
-    a, span {
-      width: calc(100% - 31px);
-      padding-left: 30px;
+  ::ng-deep ul.menu ul {
+    padding-left: 1rem;
+
+    li {
+      a, span {
+        font-size: 0.85rem;
+      }
     }
   }
 
@@ -52,9 +77,6 @@
     list-style: none;
 
     &.menu {
-      padding: 0;
-      margin: 0;
-
       li ul {
         display: none;
       }
@@ -65,3 +87,11 @@
     }
   }
 }
+
+/* Hide sidebar on mobile */
+@media (max-width: 767px) {
+  #sidebar {
+    display: none;
+  }
+}
+
