--- a/src/app/pages/teaching/institution/institution.component.scss
+++ b/src/app/pages/teaching/institution/institution.component.scss
@@ -1,11 +1,15 @@
+/* Institution header - minimal */
 .head {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding-top: 10px;
+  align-items: center;
+  padding: var(--spacing-unit) 0;
+  border-bottom: 1px solid var(--color-border);
 
   img {
     width: 32px;
     height: 32px;
+    border-radius: 4px;
   }
 }
