--- a/src/app/layout/default/sidebar/sidebar.component.html
+++ b/src/app/layout/default/sidebar/sidebar.component.html
@@ -1,38 +1,42 @@
-<div id="sidebar">
-  <ul>
-    <li>
-      @if (links().length) {
-        <h2>{{ group() }}</h2>
-        <ul class="menu">
+<aside id="sidebar">
+  @if (links().length) {
+    <section class="sidebar-section">
+      <h3>{{ group() }}</h3>
+      <ul class="menu">
         @for (link of links(); track link.id) {
           <li>
             <app-menu-link [link]="link.route">{{ link.title }}</app-menu-link>
           </li>
         }
-        </ul>
+      </ul>
+    </section>
+  }
+  <section class="sidebar-section">
+    <h3>{{ (sidebar | async)?.languageMenuTitle }}</h3>
+    <ul class="menu">
+      <li>
+        <app-menu-link [link]="enLanguageLink" [doNotLocalize]="true">
+          <span class="lang-icon">🇬🇧</span> English
+        </app-menu-link>
+      </li>
+      <li>
+        <app-menu-link [link]="frLanguageLink" [doNotLocalize]="true">
+          <span class="lang-icon">🇫🇷</span> Français
+        </app-menu-link>
+      </li>
+    </ul>
+  </section>
+  <section class="sidebar-section">
+    <h3>{{ (sidebar | async)?.externalLinksMenuTitle }}</h3>
+    <ul class="external-links">
+      @for (link of (sidebar | async)?.externalLinks; track link.id) {
+        <li>
+          <a target="_blank" [href]="link.url" class="external-link">
+            <img [ngSrc]="link.icon.url" height="20" width="20" [alt]="logoTitle(link)" class="link-icon"/>
+            <span>{{ link.title }}</span>
+          </a>
+        </li>
       }
-    </li>
-    <li>
-      <h2>{{ (sidebar | async)?.languageMenuTitle }}</h2>
-      <ul class="menu">
-        <li>
-          <app-menu-link [link]="enLanguageLink" [doNotLocalize]="true">English</app-menu-link>
-        </li>
-        <li>
-          <app-menu-link [link]="frLanguageLink" [doNotLocalize]="true">Français</app-menu-link>
-        </li>
-      </ul>
-    </li>
-    <li>
-      <h2>{{ (sidebar | async)?.externalLinksMenuTitle }}</h2>
-      <ul>
-        @for (link of (sidebar | async)?.externalLinks; track link.id) {
-          <li>
-            <img class="align-left" [ngSrc]="link.icon.url" height="16" width="16" [alt]="logoTitle(link)"/>
-            <a target="_blank" [href]="link.url">{{ link.title }}</a>
-          </li>
-        }
-      </ul>
-    </li>
-  </ul>
-</div>
+    </ul>
+  </section>
+</aside>
