--- a/src/app/pages/teaching/institution/institution.component.scss
+++ b/src/app/pages/teaching/institution/institution.component.scss
@@ -1,11 +1,30 @@
+:host {
+  display: block;
+  margin-bottom: var(--spacing-xl);
+}
+
 .head {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding-top: 10px;
+  align-items: center;
+  padding: var(--spacing-md) var(--spacing-lg);
+  background: var(--color-surface);
+  border-radius: var(--radius-lg);
+  margin-bottom: var(--spacing-md);
+  border: 1px solid var(--color-border-light);
+
+  h3 {
+    margin: 0;
+    font-size: var(--font-size-lg);
+    font-weight: 600;
+    color: var(--color-text);
+  }
 
   img {
-    width: 32px;
-    height: 32px;
+    width: 40px;
+    height: 40px;
+    border-radius: var(--radius-md);
+    object-fit: contain;
   }
 }
