--- a/src/app/pages/teaching/topic/topic.component.scss
+++ b/src/app/pages/teaching/topic/topic.component.scss
@@ -1,4 +1,28 @@
+:host {
+  display: block;
+  padding: var(--spacing-md) var(--spacing-lg);
+  margin-left: var(--spacing-lg);
+  border-left: 2px solid var(--color-border-light);
+  margin-bottom: var(--spacing-sm);
+  transition: all var(--transition);
+
+  &:hover {
+    border-left-color: var(--color-primary);
+    background: var(--color-surface);
+    border-radius: 0 var(--radius-md) var(--radius-md) 0;
+  }
+}
+
+h4 {
+  font-size: var(--font-size-base);
+  font-weight: 600;
+  color: var(--color-text);
+  margin: 0 0 var(--spacing-xs);
+}
+
 ::ng-deep p {
-  line-height: normal;
-  margin-bottom: 0;
+  line-height: 1.5;
+  margin-bottom: var(--spacing-xs);
+  font-size: var(--font-size-sm);
+  color: var(--color-text-secondary);
 }
